// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OpportunityCard > Snapshot > matches snapshot in draggable mode 1`] = `
<div
  class="bg-surface-100/50 backdrop-blur-sm rounded-xl border border-white/5 p-4 hover:border-primary/30 hover:shadow-lg hover:shadow-primary/5 transition-all cursor-grab active:cursor-grabbing"
  draggable="true"
>
  <div
    class="flex items-start justify-between mb-3"
  >
    <div
      class="flex-1 min-w-0"
    >
      <div
        class="flex items-center gap-2 mb-1"
      >
        <h3
          class="font-semibold text-white truncate"
        >
          ERP系统升级项目
        </h3>
      </div>
      <div
        class="flex items-center gap-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-building2 lucide-building-2 w-3 h-3 text-slate-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 12h4"
          />
          <path
            d="M10 8h4"
          />
          <path
            d="M14 21v-3a2 2 0 0 0-4 0v3"
          />
          <path
            d="M6 10H4a2 2 0 0 0-2 2v7a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2h-2"
          />
          <path
            d="M6 21V5a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v16"
          />
        </svg>
        <span
          class="text-xs text-slate-400"
        >
          某某科技
        </span>
      </div>
    </div>
    <span
      class="inline-flex items-center rounded-full px-2.5 py-0.5 font-medium transition-colors border border-primary/30 text-xs text-red-400 bg-red-500/20"
    >
      高
    </span>
  </div>
  <div
    class="mb-3"
  >
    <div
      class="flex items-center justify-between mb-1"
    >
      <div
        class="flex items-center gap-2"
      >
        <div
          class="w-2 h-2 rounded-full bg-amber-500"
        />
        <span
          class="text-xs text-slate-300"
        >
          报价
        </span>
      </div>
      <span
        class="text-xs text-slate-400"
      >
        成功率 
        70
        %
      </span>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        class="relative w-full overflow-hidden rounded-full bg-white/[0.05] h-1.5"
        data-max="100"
        data-state="indeterminate"
        role="progressbar"
      >
        <div
          class="h-full rounded-full transition-all duration-500 ease-out bg-gradient-to-r from-violet-500 to-indigo-500"
          data-max="100"
          data-state="indeterminate"
          style="width: 50%;"
        />
      </div>
    </div>
  </div>
  <div
    class="flex items-center justify-between mb-3"
  >
    <div
      class="flex items-center gap-2"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-dollar-sign w-4 h-4 text-amber-500"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="12"
          x2="12"
          y1="2"
          y2="22"
        />
        <path
          d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
        />
      </svg>
      <span
        class="text-lg font-semibold text-white"
      >
        ¥
        50
        万
      </span>
    </div>
    <div
      class="flex items-center gap-1 text-xs text-slate-400"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-calendar w-3 h-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 2v4"
        />
        <path
          d="M16 2v4"
        />
        <rect
          height="18"
          rx="2"
          width="18"
          x="3"
          y="4"
        />
        <path
          d="M3 10h18"
        />
      </svg>
      <span>
        预计: 
        2024-03-01
      </span>
    </div>
  </div>
  <div
    class="flex flex-wrap gap-1 mb-3"
  >
    <span
      class="inline-flex items-center rounded-full px-2.5 py-0.5 font-medium transition-colors bg-white/5 text-slate-400 border border-white/10 text-xs"
    >
      重点项目
    </span>
    <span
      class="inline-flex items-center rounded-full px-2.5 py-0.5 font-medium transition-colors bg-white/5 text-slate-400 border border-white/10 text-xs"
    >
      Q1目标
    </span>
  </div>
  <div
    class="flex items-center justify-between pt-3 border-t border-white/5"
  >
    <div
      class="flex items-center gap-3"
    >
      <div
        class="flex items-center gap-1 text-xs text-slate-400"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-user w-3 h-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="12"
            cy="7"
            r="4"
          />
        </svg>
        <span>
          张三
        </span>
      </div>
      <div
        class="flex items-center gap-1 text-xs text-slate-400"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-clock w-3 h-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 6v6l4 2"
          />
          <circle
            cx="12"
            cy="12"
            r="10"
          />
        </svg>
        <span>
          5
          天
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`OpportunityCard > Snapshot > matches snapshot in normal mode 1`] = `
<div
  class="bg-surface-100/50 backdrop-blur-sm rounded-xl border border-white/5 p-4 hover:border-primary/30 hover:shadow-lg hover:shadow-primary/5 cursor-pointer transition-all"
  draggable="false"
>
  <div
    class="flex items-start justify-between mb-3"
  >
    <div
      class="flex-1 min-w-0"
    >
      <div
        class="flex items-center gap-2 mb-1"
      >
        <h3
          class="font-semibold text-white truncate"
        >
          ERP系统升级项目
        </h3>
      </div>
      <div
        class="flex items-center gap-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-building2 lucide-building-2 w-3 h-3 text-slate-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 12h4"
          />
          <path
            d="M10 8h4"
          />
          <path
            d="M14 21v-3a2 2 0 0 0-4 0v3"
          />
          <path
            d="M6 10H4a2 2 0 0 0-2 2v7a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2h-2"
          />
          <path
            d="M6 21V5a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v16"
          />
        </svg>
        <span
          class="text-xs text-slate-400"
        >
          某某科技
        </span>
      </div>
    </div>
    <span
      class="inline-flex items-center rounded-full px-2.5 py-0.5 font-medium transition-colors border border-primary/30 text-xs text-red-400 bg-red-500/20"
    >
      高
    </span>
  </div>
  <div
    class="mb-3"
  >
    <div
      class="flex items-center justify-between mb-1"
    >
      <div
        class="flex items-center gap-2"
      >
        <div
          class="w-2 h-2 rounded-full bg-amber-500"
        />
        <span
          class="text-xs text-slate-300"
        >
          报价
        </span>
      </div>
      <span
        class="text-xs text-slate-400"
      >
        成功率 
        70
        %
      </span>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        class="relative w-full overflow-hidden rounded-full bg-white/[0.05] h-1.5"
        data-max="100"
        data-state="indeterminate"
        role="progressbar"
      >
        <div
          class="h-full rounded-full transition-all duration-500 ease-out bg-gradient-to-r from-violet-500 to-indigo-500"
          data-max="100"
          data-state="indeterminate"
          style="width: 50%;"
        />
      </div>
    </div>
  </div>
  <div
    class="flex items-center justify-between mb-3"
  >
    <div
      class="flex items-center gap-2"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-dollar-sign w-4 h-4 text-amber-500"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="12"
          x2="12"
          y1="2"
          y2="22"
        />
        <path
          d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
        />
      </svg>
      <span
        class="text-lg font-semibold text-white"
      >
        ¥
        50
        万
      </span>
    </div>
    <div
      class="flex items-center gap-1 text-xs text-slate-400"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-calendar w-3 h-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 2v4"
        />
        <path
          d="M16 2v4"
        />
        <rect
          height="18"
          rx="2"
          width="18"
          x="3"
          y="4"
        />
        <path
          d="M3 10h18"
        />
      </svg>
      <span>
        预计: 
        2024-03-01
      </span>
    </div>
  </div>
  <div
    class="flex flex-wrap gap-1 mb-3"
  >
    <span
      class="inline-flex items-center rounded-full px-2.5 py-0.5 font-medium transition-colors bg-white/5 text-slate-400 border border-white/10 text-xs"
    >
      重点项目
    </span>
    <span
      class="inline-flex items-center rounded-full px-2.5 py-0.5 font-medium transition-colors bg-white/5 text-slate-400 border border-white/10 text-xs"
    >
      Q1目标
    </span>
  </div>
  <div
    class="flex items-center justify-between pt-3 border-t border-white/5"
  >
    <div
      class="flex items-center gap-3"
    >
      <div
        class="flex items-center gap-1 text-xs text-slate-400"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-user w-3 h-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="12"
            cy="7"
            r="4"
          />
        </svg>
        <span>
          张三
        </span>
      </div>
      <div
        class="flex items-center gap-1 text-xs text-slate-400"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-clock w-3 h-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 6v6l4 2"
          />
          <circle
            cx="12"
            cy="12"
            r="10"
          />
        </svg>
        <span>
          5
          天
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`OpportunityCard > Snapshot > matches snapshot with hot and overdue 1`] = `
<div
  class="bg-surface-100/50 backdrop-blur-sm rounded-xl border p-4 hover:border-primary/30 hover:shadow-lg hover:shadow-primary/5 cursor-pointer transition-all border-amber-500/30"
  draggable="false"
>
  <div
    class="flex items-start justify-between mb-3"
  >
    <div
      class="flex-1 min-w-0"
    >
      <div
        class="flex items-center gap-2 mb-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-flame w-4 h-4 text-amber-500"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 3q1 4 4 6.5t3 5.5a1 1 0 0 1-14 0 5 5 0 0 1 1-3 1 1 0 0 0 5 0c0-2-1.5-3-1.5-5q0-2 2.5-4"
          />
        </svg>
        <h3
          class="font-semibold text-white truncate"
        >
          ERP系统升级项目
        </h3>
      </div>
      <div
        class="flex items-center gap-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-building2 lucide-building-2 w-3 h-3 text-slate-400"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 12h4"
          />
          <path
            d="M10 8h4"
          />
          <path
            d="M14 21v-3a2 2 0 0 0-4 0v3"
          />
          <path
            d="M6 10H4a2 2 0 0 0-2 2v7a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2h-2"
          />
          <path
            d="M6 21V5a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v16"
          />
        </svg>
        <span
          class="text-xs text-slate-400"
        >
          某某科技
        </span>
      </div>
    </div>
    <span
      class="inline-flex items-center rounded-full px-2.5 py-0.5 font-medium transition-colors border border-primary/30 text-xs text-red-400 bg-red-500/20"
    >
      高
    </span>
  </div>
  <div
    class="mb-3"
  >
    <div
      class="flex items-center justify-between mb-1"
    >
      <div
        class="flex items-center gap-2"
      >
        <div
          class="w-2 h-2 rounded-full bg-amber-500"
        />
        <span
          class="text-xs text-slate-300"
        >
          报价
        </span>
      </div>
      <span
        class="text-xs text-slate-400"
      >
        成功率 
        70
        %
      </span>
    </div>
    <div
      class="relative w-full"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        class="relative w-full overflow-hidden rounded-full bg-white/[0.05] h-1.5"
        data-max="100"
        data-state="indeterminate"
        role="progressbar"
      >
        <div
          class="h-full rounded-full transition-all duration-500 ease-out bg-gradient-to-r from-violet-500 to-indigo-500"
          data-max="100"
          data-state="indeterminate"
          style="width: 50%;"
        />
      </div>
    </div>
  </div>
  <div
    class="flex items-center justify-between mb-3"
  >
    <div
      class="flex items-center gap-2"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-dollar-sign w-4 h-4 text-amber-500"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="12"
          x2="12"
          y1="2"
          y2="22"
        />
        <path
          d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
        />
      </svg>
      <span
        class="text-lg font-semibold text-white"
      >
        ¥
        50
        万
      </span>
    </div>
    <div
      class="flex items-center gap-1 text-xs text-slate-400"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-calendar w-3 h-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 2v4"
        />
        <path
          d="M16 2v4"
        />
        <rect
          height="18"
          rx="2"
          width="18"
          x="3"
          y="4"
        />
        <path
          d="M3 10h18"
        />
      </svg>
      <span>
        预计: 
        2024-03-01
      </span>
    </div>
  </div>
  <div
    class="flex flex-wrap gap-1 mb-3"
  >
    <span
      class="inline-flex items-center rounded-full px-2.5 py-0.5 font-medium transition-colors bg-white/5 text-slate-400 border border-white/10 text-xs"
    >
      重点项目
    </span>
    <span
      class="inline-flex items-center rounded-full px-2.5 py-0.5 font-medium transition-colors bg-white/5 text-slate-400 border border-white/10 text-xs"
    >
      Q1目标
    </span>
  </div>
  <div
    class="flex items-center justify-between pt-3 border-t border-white/5"
  >
    <div
      class="flex items-center gap-3"
    >
      <div
        class="flex items-center gap-1 text-xs text-slate-400"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-user w-3 h-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="12"
            cy="7"
            r="4"
          />
        </svg>
        <span>
          张三
        </span>
      </div>
      <div
        class="flex items-center gap-1 text-xs text-slate-400"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-clock w-3 h-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 6v6l4 2"
          />
          <circle
            cx="12"
            cy="12"
            r="10"
          />
        </svg>
        <span>
          5
          天
        </span>
      </div>
    </div>
    <span
      class="inline-flex items-center rounded-full px-2.5 py-0.5 font-medium transition-colors text-xs"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-triangle-alert w-3 h-3 mr-1"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
        />
        <path
          d="M12 9v4"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
      逾期
    </span>
  </div>
</div>
`;
